--- a/frontend/styles/tailwind.css
+++ b/frontend/styles/tailwind.css
@@ -1,3 +1,35 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.top-2 {
+    top: 2rem;
+}
+
+.top-4 {
+    top: 4rem;
+}
+
+.top-6 {
+    top: 6rem;
+}
+
+.top-8 {
+    top: 8rem;
+}
+
+.top-10 {
+    top: 10rem;
+}
+
+.top-12 {
+    top: 12rem;
+}
+
+.top-14 {
+    top: 14rem;
+}
+
+.top-16 {
+    top: 16rem;
+}
